# BTT_agent_tielu

./: CMakeLists.txt  btt.sh  指令.text
apps/: CMakeLists.txt
apps/btt-core/: main.cpp
apps/tools/: a.out  bt_echo.c  snap_test.c  test.cpp
apps/upgraded/: main.cpp  upgraded.cpp  upgraded.h
build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
build-arm/apps/: Makefile  cmake_install.cmake
include/: serial_mgr.h
include/upgraded/: upgrade_control_protocol.h  watchdog_protocol.h
libs/core/: core_app.cpp  core_app.hpp
libs/net/: tcp_client.cpp  tcp_client.hpp
libs/proto/: btt_proto.cpp  btt_proto.hpp
libs/serial/: serial_mgr.c
libs/utils/: blocking_queue.hpp  log.cpp  log.hpp
